[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acis-trading"
version = "1.0.0"
description = "Python SDK for ACIS Trading API - AI-powered stock portfolio generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ACIS Trading", email = "support@acis-trading.com"}
]
keywords = [
    "acis",
    "trading",
    "stock",
    "portfolio",
    "ai",
    "machine-learning",
    "investment",
    "fintech",
    "api",
    "quantitative",
    "lightgbm",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://acis-trading.com"
Documentation = "https://acis-trading.com/api-docs"
Repository = "https://github.com/acis-trading/acis-python-sdk"
Issues = "https://github.com/acis-trading/acis-python-sdk/issues"

[tool.setuptools.packages.find]
include = ["acis_trading*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
